--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -16,8 +16,10 @@
 %\listoftables
 
 \mainmatter
+\input{matter/theory}
 \input{matter/baseline}
 \input{matter/ivector}
+
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
