--- a/latex/references.bib
+++ b/latex/references.bib
@@ -21,6 +21,18 @@
   year={1994},
   publisher={IEEE}
 }
+@inproceedings{soufifar2011ivector,
+  title={iVector Approach to Phonotactic Language Recognition},
+  author={Soufifar, M. and Kockmann, M. and Burget, L. and Plchot, O. and Glembek, O. and Svendsen, T.},
+  booktitle={Twelfth Annual Conference of the International Speech Communication Association},
+  year={2011}
+}
+@inproceedings{kockmann2010prosodic,
+  title={Prosodic speaker verification using subspace multinomial models with intersession compensation},
+  author={Kockmann, M. and Burget, L. and Glembek, O. and Ferrer, L. and {\v{C}}ernock{\`y}, J.},
+  booktitle={Eleventh Annual Conference of the International Speech Communication Association},
+  year={2010}
+}
 
 
 @book{lidbok,
