--- a/latex/references.bib
+++ b/latex/references.bib
@@ -33,6 +33,25 @@
   booktitle={Eleventh Annual Conference of the International Speech Communication Association},
   year={2010}
 }
+@article{wan2005speaker,
+  title={Speaker verification using sequence discriminant support vector machines},
+  author={Wan, V. and Renals, S.},
+  journal={Speech and Audio Processing, IEEE Transactions on},
+  volume={13},
+  number={2},
+  pages={203--210},
+  year={2005},
+  publisher={IEEE}
+}
+@Book{talegk,
+	author = {Xuedong Huang and Alex Acero and Hsiad-Wuen Hon},
+	title = {Spoken Language Processing; a Guide to Theory, Algorithm, and System Development},
+	year = {2001},
+	Publisher = {Prentice-Hall}
+}
+
+
+
 
 
 @book{lidbok,
@@ -41,11 +60,7 @@
 	Year = {2008},
 	Publisher = {Springer},
 	Chapter = {42}}
-@Book{talegk,
-	author = {Xuedong Huang and Alex Acero and Hsiad-Wuen Hon},
-	title = {Spoken Language Processing; a Guide to Theory, Algorithm, and System Development},
-	year = {2001},
-	Publisher = {Prentice-Hall}}
+
 @misc{probestimate,
 	Author = {Paul Glasserman AND Philip Heidelberger AND Perwez Shahabuddin AND Tim Zajic},
 	Title = {Multilevel Splitting for Estimating Rare Event Probabilities},
