Fikset detkurver og featurekolonne

--- a/latex/matter/theory.tex
+++ b/latex/matter/theory.tex
@@ -21,7 +21,12 @@ Any claim that doesn't satisfy the equation will be rejected.
 \begin{equation*}
 \underset{i}{\arg \max} P(l_i | \theta, X).
 \end{equation}
-Since both recognition problems are quite straight forward after we've found $P(l_i | \theta, X)$, most effort in the field of language recognition is put into making $\theta$ a good model of the languages of interest.
+This means that unless we are implementing a system for a real application, the distinction between the two language recognition problems aren't that important so long as we find $P(l_i | \theta, X)$. What is more important is that the model of the languages, $\theta$, is suited to distinguish languages.
+
+\subsection{Phoneme recognizer}
+\label{sect:phnrec}
+
+blabla $P(l_i | \theta, X) \approx P(l_i | \theta, X)$
 
 \section{Language Model Using Markov Chains}
 
