--- a/latex/references.bib
+++ b/latex/references.bib
@@ -49,17 +49,38 @@
 	year = {2001},
 	Publisher = {Prentice-Hall}
 }
-
-
-
-
-
+@Book{machinelearningbook,
+	author = {Christoper Bishop},
+	title = {Pattern Recognition and Machine Learning},
+	year = {2006},
+	publisher = {Springer Science+Business Media, LLC}
+}
+@book{information,
+	Author = {Chritopher D. Manning AND  Prabhakar Raghavan AND Hinrich Schütze},
+	Title = {Introduction to Information Retrieval},
+	Year = {2008},
+	Publisher = {Cambridge University Press},
+	Edition = {First}
+}
 @book{lidbok,
 	Author = {Jacob Benesty and M. M. Sondhi and Yiteng Huang},
 	Title = {Springer Handbook of Speech Processing},
 	Year = {2008},
 	Publisher = {Springer},
-	Chapter = {42}}
+	Chapter = {42}
+}
+@article{gmmpca,
+  title={Mixtures of probabilistic principal component analyzers},
+  author={Tipping, M.E. and Bishop, C.M.},
+  journal={Neural computation},
+  volume={11},
+  number={2},
+  pages={443--482},
+  year={1999},
+  publisher={MIT Press}
+}
+
+
 
 @misc{probestimate,
 	Author = {Paul Glasserman AND Philip Heidelberger AND Perwez Shahabuddin AND Tim Zajic},
@@ -109,12 +130,7 @@
 	Title = {A Comparison of Methods for Multiclass Support Vector Machines},
 	Year = {2002},
 	howpublished = {IEEE transactions on neural networks, vol. 13, no. 2}}
-@book{information,
-	Author = {Chritopher D. Manning AND  Prabhakar Raghavan AND Hinrich Schütze},
-	Title = {Introduction to Information Retrieval},
-	Year = {2008},
-	Publisher = {Cambridge University Press}
-	Edition = {First}}
+
 @misc{mitlid,
 	Author = {Pedro A. Torres-Carrasquillo AND Elliot Singer AND William Campbell AND Terry Gleason AND Alan McCree AND Douglas A. Reynolds AND Fred Richardson AND Wade Shen AND Douglas Sturim},
 	Title = {The MITLL NIST LRE 2007 Language Recognition System},
